Move core to Gson